[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onside"
version = "0.1.0"
description = "OnSide AI-Enhanced Market Intelligence Platform"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "backoff>=2.0.0"
]
